--- a/clockMaster/src/App.css
+++ b/clockMaster/src/App.css
@@ -1,9 +1,12 @@
 .App {
   text-align: center;
+  font-family: Helvetica;
+  margin-top: 23%;
 }
 
 .App-title {
   font-size: 20px;
+  margin: 5px;
 }
 
 .Clock-days, .Clock-hours, .Clock-minutes, .Clock-seconds {
