--- a/musicMaster/src/App.css
+++ b/musicMaster/src/App.css
@@ -5,9 +5,25 @@ body {
 
 .App {
   text-align: center;
-  padding: 5px;
+  padding: 5%;
 }
 
 .App-title {
   font-size: 26px;
+}
+
+.profile-img {
+  width: 220px;
+  height: 220px;
+  border: 3px solid white; /*contrast teh black background*/
+  border-radius: 3px;
+  object-fit: cover; /*important for various widths and heights of artists*/
+}
+
+.profile-name {
+  font-size: 26px;
+}
+
+.profile-followers {
+  font-size: 18px;
 }
