--- a/musicMaster/src/App.css
+++ b/musicMaster/src/App.css
@@ -3,6 +3,8 @@ body {
   color: #fff;
 }
 
+/*TODO fix search bar*/
+
 .App {
   text-align: center;
   padding: 5%;
@@ -20,10 +22,17 @@ body {
   object-fit: cover; /*important for various widths and heights of artists*/
 }
 
+.searchBar {
+  width: 50vw;
+  margin-left: 20vw;
+}
+
+
 /*Profile*/
 
 .profile {
   display: flex;
+  justify-content: center;
 }
 
 .profile-info {
@@ -67,7 +76,6 @@ body {
   border-radius: 3px;
   object-fit: cover;
   position: absolute;
-  filter: brightness(70%);
 }
 
 .track-text {
