MM Step 11: Add Audio object

--- a/musicMaster/src/App.css
+++ b/musicMaster/src/App.css
@@ -38,6 +38,9 @@ body {
 .profile-info {
   margin-left: 10px;
   text-align: left;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .profile-name {
